--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/LambdaSchool/Node-Blog#readme",
   "dependencies": {
+    "expresss": "^0.0.0",
     "knex": "^0.16.3",
     "sqlite3": "^4.0.6"
   },
