--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "expresss": "^0.0.0",
     "knex": "^0.16.3",
+    "morgan": "^1.9.1",
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
